:bug: Fix: pre element overflow error (#29)

--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -16,6 +16,7 @@ code {
 pre {
   margin: 0;
   padding: .25rem 0 .25rem .5rem;
+  overflow: auto;
   @include tab-size(4);
 
   code {
